syntax = "proto3";

package auth;

service AuthService {
  rpc VerifyJWT(TokenRequest) returns (TokenResponse);
}

message TokenRequest {}

message TokenResponse {
  string user_id = 1;
  bool is_valid = 2;
}